<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- 01 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_create"
            android:id="@+id/autoCreate"
            />

        <!-- 02 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug"
            android:id="@+id/debug"
            />

        <!-- 04 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_foreground"
            android:id="@+id/notForeground"
            />

        <!-- 08 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/above_client"
            android:id="@+id/aboveClient"
            />

        <!-- 10 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_oom"
            android:id="@+id/manageOom"
            />

        <!-- 20 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waive_priority"
            android:id="@+id/waivePriority"
            />

        <!-- 40 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important"
            android:id="@+id/important"
            />

        <!-- 80 -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_activity"
            android:id="@+id/withActivity"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/bind"
            android:text="@string/bind_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/unbind"
            android:text="@string/unbind_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>
</LinearLayout>
